iFeature Changelog

****************************

Version 4.0.2 (02-05-12)
-Fixed slider image filename.
-Fixed postbar bug on single pages.

Version 4.0.1 (02-04-12)
-License notification and theme URI fix. 

Version 4.0 (02-03-12)
-Added Foundation CSS grid, offering both responsive and static design.
-Drag and Drop Header and Blog elements added.
-Added WordPress Template Options (404, Search, Archive, Single)
-Replaced NivoSlider with Orbit.
-General bug and style fixes.

Version 3.1.4 (01-25-12)
-Moved scripts into unified function, hooking into wp_enqueue_script.

Version 3.1.3 (01-16-12)
-Fixed bug with featured thumb option.
-Re-added link color option.
-Removed unnecessary option from post meta options. 
-Fixed bug with page SEO output. 

Version 3.1.2 (01-06-12)
-Fixed social icon bug.
-Fixed menu bug.
-Fixed default color scheme bug.

Version 3.1.1 (01-05-12)
-IE 8 fix.

Version 3.1 (01-04-12)
-Changes to CyberChimps Core Framework.
-Added new theme specific hooks in light of changes to Core Framework.
-New metabox code/styling.
-Cleaned up functions file. 
-General HTML markup revisions.
-Added Dutch and German translation files.

Version 3.0.6 (12-22-11)
-Added Portuguese language support. 
-Added rel="me" attribute to social icon links.
-Removed unnecessary code from social icon function. 

Version 3.0.5 (12-15-11)
-Additional visual tweaks for WordPress 3.3.
-Minor tweak to comments hook. 
-Minor HTML markup tweak. 
-Removed 404 image. 
-General fixes and cleanup. 

Version 3.0.4 (12-09-11)
-Removed cursor:pointer from iMenu css. 
-Removed call to missing stylesheet. 
-Removed unecessary template file in Core directory.
-Fixed post formats icons not displaying without saving settings. 
-jQuery no-conflict fix.
-Now enqueing WP jQuery library.
-Changed old 'ifeature' textdomain to 'core' in comments.php. 
-Minor CSS tweak to meta link colors. 
-Centered theme options panel, added WordPress 3.3 fix. 


Version 3.0.3 (12-01-11)